[gd_scene load_steps=25 format=2]

[ext_resource path="res://Assets/Meshlibs/basic_level.meshlib" type="MeshLibrary" id=1]
[ext_resource path="res://Assets/Decoration/cactus_short.obj" type="ArrayMesh" id=2]
[ext_resource path="res://Assets/Decoration/grass_leafs.obj" type="ArrayMesh" id=3]
[ext_resource path="res://Assets/Decoration/grass.obj" type="ArrayMesh" id=4]
[ext_resource path="res://Assets/Decoration/flower_redA.obj" type="ArrayMesh" id=5]
[ext_resource path="res://Assets/Decoration/flower_purpleC.obj" type="ArrayMesh" id=6]
[ext_resource path="res://Assets/Decoration/stone_smallFlatA.obj" type="ArrayMesh" id=7]
[ext_resource path="res://Assets/Decoration/flower_yellowC.obj" type="ArrayMesh" id=8]
[ext_resource path="res://Assets/Decoration/tree_small_dark.obj" type="ArrayMesh" id=9]
[ext_resource path="res://Assets/Decoration/stump_old.obj" type="ArrayMesh" id=10]
[ext_resource path="res://Assets/Decoration/stone_smallTopB.obj" type="ArrayMesh" id=11]
[ext_resource path="res://Assets/Decoration/stone_smallC.obj" type="ArrayMesh" id=12]
[ext_resource path="res://Assets/Decoration/tree_small.obj" type="ArrayMesh" id=13]
[ext_resource path="res://Assets/Decoration/stone_smallB.obj" type="ArrayMesh" id=14]
[ext_resource path="res://src/Actors/mannequiny-030.tscn" type="PackedScene" id=15]
[ext_resource path="res://src/UserInterface/TilePointer.tscn" type="PackedScene" id=16]
[ext_resource path="res://src/Level/test_level.gd" type="Script" id=17]
[ext_resource path="res://src/Camera Pivot.tscn" type="PackedScene" id=18]
[ext_resource path="res://src/UserInterface/BattleHUD.tscn" type="PackedScene" id=19]
[ext_resource path="res://src/Actors/mannequiny-031.tscn" type="PackedScene" id=20]
[ext_resource path="res://src/Actors/mannequiny-032.tscn" type="PackedScene" id=21]
[ext_resource path="res://src/battle_manager.gd" type="Script" id=22]
[ext_resource path="res://src/UserInterface/tile_container.gd" type="Script" id=23]

[sub_resource type="Environment" id=1]
ambient_light_color = Color( 0.6, 0.509804, 0.72549, 1 )

[node name="TestLevel" type="Spatial"]
script = ExtResource( 17 )

[node name="Terrain" type="GridMap" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, -0.5 )
mesh_library = ExtResource( 1 )
cell_size = Vector3( 1, 1, 1 )
cell_center_y = false
data = {
"cells": PoolIntArray( 0, 0, 4, 1, 0, 4, 2, 0, 4, 3, 0, 4, 4, 0, 4, 5, 0, 4, 6, 0, 4, 7, 0, 4, 8, 0, 4, 9, 0, 4, 65536, 0, 4, 65541, 0, 4, 131072, 0, 4, 196608, 0, 4, 0, 1, 4, 1, 1, 4, 2, 1, 4, 3, 1, 4, 4, 1, 4, 5, 1, 4, 6, 1, 4, 7, 1, 4, 8, 1, 4, 9, 1, 4, 0, 2, 4, 1, 2, 4, 2, 2, 4, 3, 2, 4, 4, 2, 4, 5, 2, 4, 6, 2, 4, 7, 2, 4, 8, 2, 4, 9, 2, 4, 0, 3, 4, 1, 3, 4, 2, 3, 4, 3, 3, 4, 4, 3, 4, 5, 3, 4, 6, 3, 4, 7, 3, 4, 8, 3, 4, 9, 3, 4, 0, 4, 4, 1, 4, 4, 2, 4, 4, 3, 4, 4, 4, 4, 4, 5, 4, 4, 6, 4, 4, 7, 4, 4, 8, 4, 4, 9, 4, 4, 0, 5, 4, 1, 5, 4, 2, 5, 4, 3, 5, 4, 4, 5, 4, 5, 5, 4, 6, 5, 4, 7, 5, 4, 8, 5, 4, 9, 5, 4, 65545, 5, 4, 131081, 5, 4, 0, 6, 4, 1, 6, 4, 2, 6, 4, 3, 6, 4, 4, 6, 4, 5, 6, 4, 6, 6, 4, 7, 6, 4, 8, 6, 4, 9, 6, 4, 65538, 6, 4, 65545, 6, 4, 131074, 6, 4, 0, 7, 4, 1, 7, 4, 2, 7, 4, 3, 7, 4, 4, 7, 4, 5, 7, 4, 6, 7, 4, 7, 7, 4, 8, 7, 4, 9, 7, 4, 0, 8, 4, 1, 8, 4, 2, 8, 4, 3, 8, 4, 4, 8, 4, 5, 8, 4, 6, 8, 4, 7, 8, 4, 8, 8, 4, 9, 8, 4, 0, 9, 4, 1, 9, 4, 2, 9, 4, 3, 9, 4, 4, 9, 4, 5, 9, 4, 6, 9, 4, 7, 9, 4, 8, 9, 4, 9, 9, 4 )
}
__meta__ = {
"_editor_clip_": 0,
"_editor_floor_": Vector3( 0, 1, 0 )
}

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, -5.44745, 5.14494, 3.26732 )
light_color = Color( 0.992157, 0.992157, 0.866667, 1 )
shadow_enabled = true

[node name="Decoration" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, -0.5 )

[node name="tree_small" type="MeshInstance" parent="Decoration"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5.68066, 2, 0.454185 )
mesh = ExtResource( 13 )
material/0 = null
material/1 = null

[node name="grass_leafs" type="MeshInstance" parent="Decoration"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.239, 4, 0.223 )
mesh = ExtResource( 3 )
material/0 = null

[node name="grass_leafs2" type="MeshInstance" parent="Decoration"]
transform = Transform( 0.5, 0, 0, 0, 1, 0, 0, 0, 0.5, 0.669, 4, 0.671 )
mesh = ExtResource( 3 )
material/0 = null

[node name="grass" type="MeshInstance" parent="Decoration"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 8.813, 1, 5.698 )
mesh = ExtResource( 4 )
material/0 = null

[node name="grass2" type="MeshInstance" parent="Decoration"]
transform = Transform( 0.934541, 0.174885, -0.309916, -0.218433, 0.969447, -0.11162, 0.280927, 0.17201, 0.944189, 2.488, 1, 7.259 )
mesh = ExtResource( 4 )
material/0 = null

[node name="grass3" type="MeshInstance" parent="Decoration"]
transform = Transform( 0.934541, 0.174885, -0.309916, -0.218433, 0.969447, -0.11162, 0.280927, 0.17201, 0.944189, 6.253, 1, 0.46 )
mesh = ExtResource( 4 )
material/0 = null

[node name="stone_smallTopB" type="MeshInstance" parent="Decoration"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.74264, 1, 8.828 )
mesh = ExtResource( 11 )
material/0 = null

[node name="flower_redA" type="MeshInstance" parent="Decoration"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.503, 1, 7.214 )
mesh = ExtResource( 5 )
material/0 = null
material/1 = null

[node name="flower_purpleC" type="MeshInstance" parent="Decoration"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 6.136, 1, 0.603 )
mesh = ExtResource( 6 )
material/0 = null
material/1 = null
material/2 = null

[node name="flower_yellowC" type="MeshInstance" parent="Decoration"]
transform = Transform( 0.999867, 0, -0.0163181, 0, 1, 0, 0.0163181, 0, 0.999867, 5.51266, 1, 5.47295 )
mesh = ExtResource( 8 )
material/0 = null
material/1 = null
material/2 = null

[node name="cactus_short" type="MeshInstance" parent="Decoration"]
transform = Transform( 0.999867, 0, -0.0163181, 0, 1, 0, 0.0163181, 0, 0.999867, 1.766, 1, 3.919 )
mesh = ExtResource( 2 )
material/0 = null

[node name="stone_smallB" type="MeshInstance" parent="Decoration"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 7.821, 1, 8.214 )
mesh = ExtResource( 14 )
material/0 = null

[node name="stone_smallC" type="MeshInstance" parent="Decoration"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.012, 1, 2.579 )
mesh = ExtResource( 12 )
material/0 = null

[node name="stone_smallFlatA" type="MeshInstance" parent="Decoration"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 7.98199, 1, 2.57535 )
mesh = ExtResource( 7 )
material/0 = null

[node name="stump_old2" type="MeshInstance" parent="Decoration"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.34739, 3, 6.61321 )
mesh = ExtResource( 10 )
material/0 = null

[node name="tree_small_dark" type="MeshInstance" parent="Decoration"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9.28763, 3, 5.31125 )
mesh = ExtResource( 9 )
material/0 = null
material/1 = null

[node name="TilePointer" parent="." instance=ExtResource( 16 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1, 0 )

[node name="Battlers" type="Spatial" parent="."]
script = ExtResource( 22 )

[node name="mannequiny-030" parent="Battlers" instance=ExtResource( 15 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 1, 4 )
coordinate = Vector2( 5, 4 )
height = 1.0
jump = 1

[node name="mannequiny-031" parent="Battlers" instance=ExtResource( 20 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 1, 6 )
coordinate = Vector2( 8, 6 )
height = 1.0

[node name="mannequiny-032" parent="Battlers" instance=ExtResource( 21 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9, 2, 7 )
coordinate = Vector2( 9, 7 )
height = 2.0

[node name="Camera Pivot" parent="." instance=ExtResource( 18 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 1, 5 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="BattleHUD" parent="." instance=ExtResource( 19 )]

[node name="TileContainer" type="Spatial" parent="."]
script = ExtResource( 23 )

[connection signal="hide_actor_info" from="TilePointer" to="BattleHUD" method="_on_TilePointer_hide_actor_info"]
[connection signal="pointer_moved" from="TilePointer" to="BattleHUD" method="_on_TilePointer_pointer_moved"]
[connection signal="pointer_moved" from="TilePointer" to="Camera Pivot" method="_on_TilePointer_pointer_moved"]
[connection signal="show_actor_info" from="TilePointer" to="BattleHUD" method="_on_TilePointer_show_actor_info"]
[connection signal="hide_command" from="Battlers" to="BattleHUD" method="_on_Battlers_hide_command"]
[connection signal="show_command" from="Battlers" to="BattleHUD" method="_on_Battlers_show_command"]
[connection signal="rotation_changed" from="Camera Pivot" to="TilePointer" method="_on_Camera_Pivot_rotation_changed"]
[connection signal="move_button_pressed" from="BattleHUD" to="Battlers" method="_on_move_button_pressed"]

[editable path="TilePointer"]
